tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_int/input.essence
find s : set of int(1..10)
find x : int(1..10)
such that s != x
